fixing images being cropped

--- a/public/assets/css/critical.css
+++ b/public/assets/css/critical.css
@@ -60,7 +60,7 @@ html {
     position: relative;
     width: 100%;
     min-height: 100vh; /* Full viewport height */
-    max-height: 160vh;
+    max-height: 200vh;
     background-color: #000; /* Black background */
     display: flex;
     justify-content: center; /* Center horizontally */
